--- a/articles/active-directory/external-identities/toc.yml
+++ b/articles/active-directory/external-identities/toc.yml
@@ -90,7 +90,7 @@
           items:
             - name: Azure Active Directory
               href: azure-ad-account.md
-            - name: Microsoft-Konto (Vorschau)
+            - name: Microsoft-Konto
               href: microsoft-account.md
             - name: Verbund mit Google
               href: google-federation.md
@@ -114,6 +114,8 @@
               href: self-service-sign-up-add-api-connector.md
             - name: Hinzufügen eines benutzerdefinierten Genehmigungssystems
               href: self-service-sign-up-add-approvals.md
+            - name: Schützen Ihres API-Connectors
+              href: self-service-sign-up-secure-api-connector.md
         - name: Verwalten von Gastbenutzerkonten
           items:
             - name: Dynamische Gruppen und B2B-Benutzer
@@ -153,7 +155,7 @@
         - name: "Frageseite von Microsoft\_Q&A (Fragen und Antworten)"
           href: /answers/topics/azure-active-directory.html
         - name: Preise
-          href: 'https://azure.microsoft.com/pricing/details/active-directory/'
+          href: 'https://www.microsoft.com/security/business/identity-access-management/azure-ad-pricing'
         - name: Preisrechner
           href: 'https://azure.microsoft.com/pricing/calculator/'
         - name: Dienstupdates
