--- a/articles/defender-for-iot/index.yml
+++ b/articles/defender-for-iot/index.yml
@@ -1,86 +1,71 @@
-### YamlMime:Landing
-title: Dokumentation zu Azure Defender für IoT
-summary: Azure Defender für IoT bietet umfassende Bedrohungserkennung für IoT-/OT-Umgebungen mit mehreren Bereitstellungsoptionen, u. a. für vollständig lokale Bereitstellung, Bereitstellung mit Cloudverbindung oder Hybridbereitstellung.
+### YamlMime:Hub
+title: Azure Defender für IoT
+summary: "Azure Defender für IoT bietet umfassende Bedrohungserkennung für IoT-/OT-Umgebungen mit mehreren Bereitstellungsoptionen, u.\_a. für vollständig lokale Bereitstellung, Bereitstellung mit Cloudverbindung oder Hybridbereitstellung."
+brand: azure
 metadata:
   title: Dokumentation zu Azure Defender für IoT
-  description: Hier erfahren Sie, wie Azure Defender für IoT, ein auf Azure basierender Cloudsicherheitsdienst, umfassenden Bedrohungsschutz für IoT-Geräte bietet.
+  description: 'Hier erfahren Sie, wie Azure Defender für IoT, ein auf Azure basierender Cloudsicherheitsdienst, umfassenden Bedrohungsschutz für IoT-Geräte bietet.'
   services: service
   ms.service: defender-for-iot
   ms.topic: landing-page
   ms.collection: M365-security-compliance
-  author: mlottner
-  ms.author: mlottner
-  ms.date: 09/07/2020
-  ms.openlocfilehash: 1e7f3b151691c80861c9add3188a3d4479fac059
-  ms.sourcegitcommit: 4bda786435578ec7d6d94c72ca8642ce47ac628a
-  ms.translationtype: HT
-  ms.contentlocale: de-DE
-  ms.lasthandoff: 03/16/2021
-  ms.locfileid: "103496098"
-landingContent:
-- title: Erste Schritte mit Azure Defender für IoT
-  linkLists:
-  - linkListType: overview
-    links:
-    - text: Was ist Azure Defender für IoT?
-      url: overview.md
-    - text: Lösungsarchitektur
-      url: architecture.md
-    - text: Übersicht über das Lösungssetup
-      url: getting-started.md
-    - text: Was gibt es Neues?
-      url: release-notes.md
-- title: 'Einrichten und Durchführen des Onboardings: Lösung ohne Agent'
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: Einrichten des Netzwerks
-      url: how-to-set-up-your-network.md
-    - text: Ermitteln der erforderlichen Appliances
-      url: how-to-identify-required-appliances.md
-    - text: Installieren von Software
-      url: how-to-install-software.md
-- title: 'Überwachen des Netzwerks: Lösung ohne Agent'
-  linkLists:
-  - linkListType: how-to-guide
-    links:
-    - text: Anzeigen verbundener Geräte
-      url: how-to-work-with-the-sensor-device-map.md
-    - text: Anzeigen des Gerätebestands
-      url: how-to-investigate-sensor-detections-in-a-device-inventory.md
-    - text: Untersuchen von Warnungen
-      url: how-to-work-with-alerts-on-your-sensor.md
-    - text: Steuern, welcher Datenverkehr erkannt wird
-      url: how-to-control-what-traffic-is-monitored.md
-    - text: Verbinden mit Azure Sentinel
-      url: how-to-configure-with-sentinel.md
-- title: 'Azure Defender für IoT: Agent-basierte Lösung'
-  linkLists:
-  - linkListType: overview
-    links:
-    - text: IoT-Micro-Agent von Edge Defender
-      url: security-edge-architecture.md
-  - linkListType: quickstart
-    links:
-    - text: 'Aktivieren von IoT Hub: Agent-basierte Lösungen'
-      url: quickstart-onboard-iot-hub.md
-    - text: Konfigurieren Ihrer IoT-Sicherheitslösung
-      url: quickstart-configure-your-solution.md
-    - text: Konfigurieren Ihres Defender-IoT-Micro-Agents für Azure RTOS
-      url: quickstart-azure-rtos-security-module.md
-    - text: Erstellen eines Modulzwillings für Azure Defender für IoT
-      url: quickstart-create-security-twin.md
-    - text: Erstellen benutzerdefinierter Sicherheitswarnungen
-      url: quickstart-create-custom-alerts.md
-    - text: Untersuchen von Sicherheitswarnungen
-      url: quickstart-investigate-security-alerts.md
-- title: 'Azure Defender für IoT: Lösungsressourcen'
-  linkLists:
-  - linkListType: video
-    links:
-    - text: Take
-      url: https://myignite.microsoft.com/sessions/973175b0-2a2d-4b41-99f8-051e42ac575a
-  - linkListType: reference
-    links:
-    - text: Häufig gestellte Fragen
-      url: resources-frequently-asked-questions.md
+  author: elazark
+  ms.author: v-ekrieg
+  manager: raynew
+  ms.date: 06/16/2021
+highlightedContent:
+  items:
+    - title: Was ist Azure Defender für IoT für Endbenutzerorganisationen?
+      itemType: overview
+      url: organizations/overview.md
+    - title: Neues für Organisationen
+      itemType: whats-new
+      url: organizations/release-notes.md
+    - title: Architektur der Lösung ohne Agent für Organisationen
+      itemType: architecture
+      url: organizations/architecture.md
+    - title: Was ist Azure Defender für IoT für Gerätehersteller?
+      itemType: overview
+      url: device-builders/overview.md
+    - title: Neues für Geräteentwickler
+      itemType: whats-new
+      url: device-builders/release-notes.md
+    - title: Architektur einer Agent-basierten Lösung für Gerätehersteller
+      itemType: architecture
+      url: device-builders/architecture-agent-based.md
+conceptualContent:
+  items:
+    - title: Azure Defender für IoT für Endbenutzerorganisationen
+      links:
+        - url: organizations/quickstart-system-prerequisites.md
+          itemType: quickstart
+          text: Systemanforderungen
+        - url: organizations/getting-started.md
+          itemType: quickstart
+          text: Erste Schritte mit Azure Defender für IoT für Endbenutzerorganisationen
+        - url: organizations/concept-key-concepts.md
+          itemType: quickstart
+          text: Wichtige Begriffe
+        - url: organizations/how-to-set-up-your-network.md
+          itemType: how-to-guide
+          text: 'Azure Defender für IoT: Netzwerkeinrichtung'
+      footerLink:
+        url: organizations/index.yml
+        text: Weitere Informationen
+    - title: Azure Defender für IoT für Gerätehersteller
+      links:
+        - url: device-builders/quickstart-onboard-iot-hub.md
+          itemType: quickstart
+          text: Durchführen des Onboardings für Defender für IoT in einer Agent-basierten Lösung
+        - url: device-builders/quickstart-configure-your-solution.md
+          itemType: quickstart
+          text: Konfigurieren Ihrer Lösung mit Azure Defender für IoT
+        - url: device-builders/concept-recommendations.md
+          itemType: concept
+          text: Sicherheitsempfehlungen für IoT Hub
+        - url: device-builders/how-to-configure-agent-based-solution.md
+          itemType: how-to-guide
+          text: Konfigurieren von Azure Defender für IoT
+      footerLink:
+        url: device-builders/index.yml
+        text: Weitere Informationen
