--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -76,11 +76,7 @@
             - name: Einrichten eines Skriptbeispiels
               href: how-to-set-up-instance-scripted.md
         - name: Aktivieren des privaten Zugriffs mit Private Link
-          items:
-            - name: Portal
-              href: how-to-enable-private-link-portal.md
-            - name: Befehlszeilenschnittstelle (CLI)
-              href: how-to-enable-private-link-cli.md
+          href: how-to-enable-private-link.md
         - name: Schreiben von App-Authentifizierungscode
           href: how-to-authenticate-client.md
         - name: Erstellen einer App-Registrierung
@@ -105,7 +101,7 @@
           href: how-to-use-azure-digital-twins-explorer.md
         - name: Verwalten digitaler Zwillinge
           href: how-to-manage-twin.md
-        - name: Verwalten des Zwillingsgraphen mit Beziehungen
+        - name: Verwalten des Zwillingsgraphen und der Beziehungen
           href: how-to-manage-graph.md
         - name: Einrichten einer Azure-Funktion zum Verarbeiten von Daten
           href: how-to-create-azure-function.md
@@ -130,11 +126,7 @@
     - name: Verbinden der Ausgabe
       items:
         - name: Verwalten von Endpunkten und Routen
-          items:
-            - name: Portal
-              href: how-to-manage-routes-portal.md
-            - name: APIs und CLI
-              href: how-to-manage-routes-apis-cli.md
+          href: how-to-manage-routes.md
         - name: Weiterleiten von Ereignissen mit einer verwalteten Identität
           href: how-to-route-with-managed-identity.md
         - name: Integration in Azure Maps
