--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -48,12 +48,16 @@
     - name: Bereinigen und Löschen des Mandanten
       href: tutorial-delete-tenant.md
 - name: Beispiele
-  href: code-samples.md
+  items:
+    - name: Integrieren von Azure AD B2C in Ihre Anwendungen
+      href: integrate-with-app-code-samples.md
+    - name: Verwenden von API-Connectors zum Ändern von Benutzerflows
+      href: api-connector-samples.md
 - name: Konzepte
   items:
     - name: Vergleichen von Lösungen für externe Identitäten
       href: ../active-directory/external-identities/compare-with-b2c.md?bc=%2fazure%2factive-directory-b2c%2fbread%2ftoc.json&toc=%2fazure%2factive-directory-b2c%2fTOC.json
-    - name: Erlernen der Grundlagen
+    - name: Authentifizierungsgrundlagen
       items:
         - name: Authentifizierung und Autorisierung
           href: ../active-directory/develop/authentication-vs-authorization.md?bc=%2fazure%2factive-directory-b2c%2fbread%2ftoc.json&toc=%2fazure%2factive-directory-b2c%2fTOC.json
@@ -84,6 +88,8 @@
     - name: Benutzerfreundlichkeit
       expanded: true
       items:
+        - name: Anmeldeoptionen
+          href: sign-in-options.md
         - name: Benutzerflows und benutzerdefinierte Richtlinien
           href: user-flow-overview.md
         - name: Übersicht über benutzerdefinierte Richtlinien
@@ -109,7 +115,7 @@
           items:
             - name: Konfigurieren einer Beispiel-Web-App
               href: configure-authentication-sample-web-app.md
-            - name: Aktivieren der Authentifizierung in Ihrer App
+            - name: Aktivieren der Authentifizierung in Ihrer Web-App
               href: enable-authentication-web-application.md
             - name: Authentifizierungsoptionen
               href: enable-authentication-web-application-options.md
@@ -117,7 +123,7 @@
           items:
             - name: 'Konfigurieren einer Beispiel-Web-App, die die API aufruft'
               href: configure-authentication-sample-web-app-with-api.md
-            - name: Aktivieren der Authentifizierung in Ihrer App
+            - name: Aktivieren der Authentifizierung in Ihrer Web-App
               href: enable-authentication-web-app-with-api.md
             - name: Authentifizierungsoptionen
               href: enable-authentication-web-app-with-api-options.md
@@ -125,8 +131,20 @@
           items:
             - name: Konfigurieren einer Beispiel-SPA-App
               href: configure-authentication-sample-spa-app.md
+            - name: Aktivieren der Authentifizierung in Ihrer SPA
+              href: enable-authentication-spa-app.md
             - name: Authentifizierungsoptionen
               href: enable-authentication-spa-app-options.md
+        - name: Mobile Android-App
+          items:
+            - name: Konfigurieren einer exemplarischen Android-App
+              href: configure-authentication-sample-android-app.md
+            - name: Aktivieren der Authentifizierung in Ihrer Android-App
+              href: enable-authentication-android-app.md
+            - name: Authentifizierungsoptionen
+              href: enable-authentication-android-app-options.md
+        - name: Aktivieren der Authentifizierung in Ihrer Web-API
+          href: enable-authentication-web-api.md
         - name: Registrieren einer Single-Page-Webanwendung (SPA)
           href: tutorial-register-spa.md
         - name: SAML-Anwendung
@@ -148,6 +166,8 @@
           href: signin-appauth-ios.md
         - name: Android mit App-Authentifizierung
           href: signin-appauth-android.md
+        - name: "Veröffentlichen Ihrer App im Azure\_AD-App-Katalog"
+          href: publish-app-to-azure-ad-app-gallery.md
         - name: Sichere API Management-API
           href: secure-api-management.md
           displayName: 'apim, api management, migrate, b2clogin.com'
@@ -269,6 +289,8 @@
               href: multi-factor-authentication.md
             - name: Partnerintegration
               items:
+                - name: BlokSec
+                  href: partner-bloksec.md
                 - name: HYPR
                   href: partner-hypr.md
                 - name: Keyless
@@ -358,6 +380,8 @@
           href: partner-onfido.md
     - name: Schützen des Zugriffs auf Legacy-Apps und lokale Apps
       items:
+        - name: Datawiza
+          href: partner-datawiza.md
         - name: Ping Identity
           href: partner-ping-identity.md
         - name: Strata
@@ -374,6 +398,8 @@
           href: custom-domain.md
         - name: Partner für Web Application Firewall
           items:
+            - name: Akamai
+              href: partner-akamai.md
             - name: Cloudflare
               href: partner-cloudflare.md
         - name: Konfigurieren von Web-API-Domänen
