--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -292,6 +292,8 @@
           href: howto-use-analytics.md
         - name: Protokollieren von Ereignissen in Azure Event Hubs
           href: api-management-howto-log-event-hubs.md
+        - name: Senden von Ereignissen an Event Grid
+          href: how-to-event-grid.md
         - name: Protokollieren von Anforderungen mit Azure Application Insights
           href: api-management-howto-app-insights.md
         - name: Konfigurieren von Cloudmetriken und -protokollen für selbstgehostete Gateways
@@ -335,6 +337,8 @@
       href: ./policy-reference.md
     - name: Ressourcenprotokollschema
       href: gateway-log-schema-reference.md
+    - name: Event Grid-Schema
+      href: ../event-grid/event-schema-api-management.md?toc=/azure/api-management/toc.json&bc=/azure/api-management/breadcrumb/toc.json
 - name: Ressourcen
   items:
     - name: Häufig gestellte Fragen
