--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -284,6 +284,8 @@
       href: migrate-v1-v2.md
 - name: Verweis
   items:
+    - name: Allgemeine Key Vault-Fehler
+      href: application-gateway-key-vault-common-errors.md
     - name: Überwachungsdaten
       href: monitor-application-gateway-reference.md
     - name: Eingang für AKS-Anmerkungen
