--- a/articles/backup/toc.yml
+++ b/articles/backup/toc.yml
@@ -238,6 +238,12 @@
               href: backup-managed-disks-ps.md
             - name: Restore
               href: restore-managed-disks-ps.md
+        - name: Mit der Befehlszeilenschnittstelle
+          items:
+            - name: Backup
+              href: backup-managed-disks-cli.md
+            - name: Restore
+              href: restore-managed-disks-cli.md
     - name: Azure-Blobsicherung
       items:
         - name: Übersicht
@@ -254,6 +260,20 @@
               href: backup-blobs-storage-account-ps.md
             - name: Restore
               href: restore-blobs-storage-account-ps.md
+        - name: Mit der Befehlszeilenschnittstelle
+          items:
+            - name: Backup
+              href: backup-blobs-storage-account-cli.md
+            - name: Restore
+              href: restore-blobs-storage-account-cli.md
+        - name: Mit der REST-API
+          items:
+            - name: Blobrichtlinie
+              href: backup-azure-dataprotection-use-rest-api-create-update-blob-policy.md
+            - name: Backup
+              href: backup-azure-dataprotection-use-rest-api-backup-blobs.md
+            - name: Restore
+              href: backup-azure-dataprotection-use-rest-api-restore-blobs.md
     - name: Sichern von Azure-Dateifreigaben
       items:
         - name: Übersicht
@@ -304,7 +324,7 @@
       items:
         - name: Schutzmatrizen
           items:
-            - name: MABS V3 UR1-Schutzmatrix
+            - name: Schutzmatrix für MABS V3 UR1 (und höher)
               href: backup-mabs-protection-matrix.md
             - name: MABS V3 RTM-Schutzmatrix
               href: microsoft-azure-backup-server-protection-v3.md
@@ -318,12 +338,16 @@
               href: backup-mabs-whats-new-mabs.md
             - name: Versionshinweise für MABS
               href: backup-mabs-release-notes-v3.md
+            - name: Einstellungen zum Aktivieren bzw. Deaktivieren der Telemetrie
+              href: manage-telemetry.md
             - name: Unbeaufsichtigte Installation
               href: backup-mabs-unattended-install.md
         - name: Schützen von Workloads
           items:
             - name: Sichern von virtuellen Hyper-V-Computern
               href: back-up-hyper-v-virtual-machines-mabs.md
+            - name: Sichern von virtuellen Azure Stack HCI-Computern
+              href: back-up-azure-stack-hyperconverged-infrastructure-virtual-machines.md
             - name: VMware-Server
               href: backup-azure-backup-server-vmware.md
             - name: Exchange
@@ -334,6 +358,8 @@
               href: backup-azure-sql-mabs.md
             - name: Schützen des Systemstatus und Bare-Metal-Recovery
               href: backup-mabs-system-state-and-bmr.md
+            - name: Verwenden von vor der Sicherung und nach der Sicherung auszuführenden Skripts
+              href: pre-backup-post-backup-scripts.md
         - name: Wiederherstellen von Daten von Azure Backup Server
           href: backup-azure-alternate-dpm-server.md
         - name: Wiederherstellen von VMware-VMs mit Azure Backup Server
@@ -440,6 +466,8 @@
               href: backup-azure-arm-userestapi-restoreazurevms.md
             - name: Verwalten von Azure Backup-Aufträgen
               href: backup-azure-arm-userestapi-managejobs.md
+        - name: Verwenden der REST-API für den Schutz von Daten in Azure
+          href: backup-azure-dataprotection-use-rest-api-create-update-backup-vault.md
         - name: Abfragen von Sicherungsinformationen mithilfe von ARG
           href: query-backups-using-azure-resource-graph.md
         - name: Resource Manager-Vorlagen
@@ -526,7 +554,7 @@
       href: ./policy-reference.md
 - name: Ressourcen
   items:
-    - name: Kompatibilität
+    - name: Compliance
       href: compliance-offerings.md
     - name: Azure-Roadmap
       href: 'https://azure.microsoft.com/roadmap/'
