--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -273,6 +273,8 @@
       items:
         - name: 'Erkennen von Sprachabsichten mit LUIS, C#'
           href: how-to-recognize-intents-from-speech-csharp.md
+        - name: 'Erkennen von Sprachabsichten mit einfachem Musterabgleich, C++'
+          href: how-to-use-simple-language-pattern-matching.md
     - name: Verweis
       items:
         - name: Sprach-SDK
@@ -442,7 +444,7 @@
                 - name: Beispiele für Sprachassistenten (GitHub)
                   href: 'http://aka.ms/speech/va-samples'
                 - name: Häufig gestellte Fragen zu Sprachassistenten
-                  href: faq-voice-assistants.md
+                  href: faq-voice-assistants.yml
                 - name: Verschlüsselung ruhender Daten mithilfe benutzerdefinierter Befehle
                   href: custom-commands-encryption-of-data-at-rest.md
         - name: Direct Line Speech
@@ -460,7 +462,7 @@
             - name: Ressourcen
               items:
                 - name: Häufig gestellte Fragen zu Sprachassistenten
-                  href: faq-voice-assistants.md
+                  href: faq-voice-assistants.yml
         - name: Sprachassistenten unter Windows
           items:
             - name: Übersicht über Sprachassistenten unter Windows
@@ -478,7 +480,7 @@
                 - name: Best Practices für Assistenten
                   href: windows-voice-assistants-best-practices.md
                 - name: Beispiele und häufig gestellte Fragen
-                  href: windows-voice-assistants-faq.md
+                  href: windows-voice-assistants-faq.yml
 - name: Anleitungen
   items:
     - name: Aktivieren der Protokollierung
