--- a/articles/defender-for-iot/device-builders/TOC.yml
+++ b/articles/defender-for-iot/device-builders/TOC.yml
@@ -56,6 +56,9 @@
     - name: Micro-Agent-Ereigniserfassung (Vorschau)
       displayName: 'process events, network connection'
       href: concept-event-aggregation.md
+    - name: Linux-Abhängigkeiten des Micro-Agents
+      displayName: 'linux, micro agent, agent'
+      href: concept-micro-agent-linux-dependencies.md
     - name: Integrierte Warnungen für IoT Hub
       displayName: 'binary command line, disable firewall, port forwarding detection, possible attempt to disable auditd logging detected, reverse shells, successful bruteforce attempt, successful local login, web shell, Behavior similar, Crypto coin, suspicious, Exposed Docker,'
       href: concept-security-alerts.md
