--- a/articles/firewall/toc.yml
+++ b/articles/firewall/toc.yml
@@ -38,6 +38,8 @@
       href: premium-portal.md
     - name: Azure Firewall Premium-Zertifikate
       href: premium-certificates.md
+    - name: Azure Firewall-Webkategorien
+      href: web-categories.md
     - name: FQDN-Tags
       href: fqdn-tags.md
     - name: Infrastruktur-FQDNs
