--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -110,6 +110,8 @@
           href: ./samples/iso-27001.md
         - name: Durch New Zealand ISM eingeschränkt
           href: ./samples/new-zealand-ism.md
+        - name: NIST SP 800-53 R5
+          href: ./samples/nist-sp-800-53-r5.md
         - name: NIST SP 800-53 R4
           href: ./samples/nist-sp-800-53-r4.md
         - name: NIST SP 800-171 R2
@@ -335,7 +337,7 @@
       items:
         - name: YouTube-Kanal zu Governance
           href: 'https://www.youtube.com/channel/UCZZ3-oMrVI5ssheMzaWC4uQ'
-    - name: Azure-Roadmap
-      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Azure-Updates
+      href: 'https://azure.microsoft.com/updates/'
     - name: Preisrechner
       href: 'https://azure.microsoft.com/pricing/calculator/'
