--- a/articles/industrial-iot/TOC.yml
+++ b/articles/industrial-iot/TOC.yml
@@ -1,5 +1,7 @@
 - name: Dokumentation zu Azure Industrial IoT
   href: index.yml
+- name: "Azure\_Industrial\_IoT-Plattformversionen"
+  href: industrial-iot-platform-versions.md
 - name: Übersicht
   items:
     - name: "Was ist Industrial\_IoT?"
@@ -22,8 +24,8 @@
           href: tutorial-deploy-industrial-iot-platform.md
         - name: Konfigurieren von IIoT-Komponenten
           href: tutorial-configure-industrial-iot-components.md
-        - name: "Tutorial: Pullen von Azure\_Industrial\_IoT-Daten in ADX"
-          href: tutorial-industrial-iot-azure-data-explorer.md
+        - name: "Pullen von Daten in Azure Data Explorer mithilfe von Industrial\_IoT"
+          href: tutorial-data-explorer-import.md
         - name: 'Tutorial: Visualisieren von Daten mit Time Series Insights (TSI)'
           href: tutorial-visualize-data-time-series-insights.md
 - name: Verweis
@@ -55,7 +57,7 @@
         - name: IoT Solution Accelerators
           href: ./index.yml
         - name: "IoT\_Plug\_&\_Play"
-          href: ../iot-pnp/index.yml
+          href: ../iot-develop/index.yml
         - name: Azure Maps
           href: ../azure-maps/index.yml
         - name: Time Series Insights
