--- a/articles/iot-develop/TOC.yml
+++ b/articles/iot-develop/TOC.yml
@@ -35,22 +35,74 @@
           href: quickstart-devkit-stm-b-l475e.md
 - name: Tutorials
   items:
+    - name: Erstellen einer Gerätelösung mit IoT Hub
+      items:
+        - name: Einrichten Ihrer Umgebung
+          href: set-up-environment.md
+        - name: "Verbinden eines Geräts mit IoT\_Hub"
+          href: tutorial-connect-device.md
+        - name: Interagieren mit einem Gerät über Ihre Lösung
+          href: tutorial-service.md
     - name: Sicheres Verknüpfen von IoT-Geräten mit der Cloud
       href: /learn/paths/securely-connect-iot-devices/?wt.mc_id=iothub_connect_docs_tutorials
+    - name: Herstellen einer Verbindung mit einem Gerät mit mehreren Komponenten
+      href: tutorial-multiple-components.md
+    - name: Herstellen einer Verbindung mit einem Gerät mithilfe von MQTT
+      href: tutorial-use-mqtt.md
+    - name: Herstellen einer Verbindung mit einem Gerätemodul
+      href: tutorial-migrate-device-to-module.md
+    - name: 'Vorschau: Herstellen einer Verbindung und Analysieren von Daten mit Time Series Insights Gen2'
+      href: tutorial-configure-tsi.md
 - name: Konzepte
   items:
     - name: Verbindungsoptionen für Geräteentwickler
       href: concepts-overview-connection-options.md
     - name: Übersicht über Gerätetypen
       href: concepts-iot-device-types.md
-- name: Anleitung
+    - name: Gerätezertifizierung
+      href: ../certification/program-requirements-pnp.md
+    - name: Gerätemodelle
+      items:
+        - name: Leitfaden zur Modellierung
+          href: concepts-modeling-guide.md
+        - name: Verwenden von Modellen in einer Lösung
+          href: concepts-model-discovery.md
+        - name: Modellrepository
+          href: concepts-model-repository.md
+        - name: Modellparser
+          href: concepts-model-parser.md
+    - name: IoT Plug & Play
+      items:
+        - name: "Was ist IoT\_Plug\_&\_Play?"
+          href: overview-iot-plug-and-play.md
+        - name: Architektur
+          href: concepts-architecture.md
+        - name: IoT Plug & Play-Konventionen
+          href: concepts-convention.md
+        - name: Leitfaden für Geräteentwickler
+          href: concepts-developer-guide-device.md
+        - name: Leitfaden für Dienstentwickler
+          href: concepts-developer-guide-service.md
+        - name: Digital Twins
+          href: concepts-digital-twin.md
+        - name: "IoT Plug\_&\_Play-Brücke"
+          href: concepts-iot-pnp-bridge.md
+- name: Vorgehensweise
   items:
+    - name: Installieren und Verwenden des IoT-Explorers
+      href: ../iot-fundamentals/howto-use-iot-explorer.md?toc=/azure/iot-develop/toc.json&bc=/azure/iot-develop/breadcrumb/toc.json
+    - name: Verwalten digitaler Zwillinge
+      href: howto-manage-digital-twin.md
+    - name: "Konvertieren eines Geräts in IoT\_Plug\_&\_Play"
+      href: howto-convert-to-pnp.md
     - name: Problembehandlung
       items:
         - name: Problembehandlung für eingebettete Schnellstarts
           href: troubleshoot-embedded-device-quickstarts.md
 - name: Verweis
   items:
+    - name: Bibliotheken und SDKs
+      href: libraries-sdks.md
     - name: Azure CLI
       href: /cli/azure/azure-cli-reference-for-IoT
     - name: Azure PowerShell
@@ -61,6 +113,8 @@
       href: 'https://azure.github.io/azure-sdk-for-c/'
     - name: Azure RTOS-Middleware (Gerät)
       href: /azure/rtos/threadx
+    - name: REST-API für digitale Zwillinge
+      href: /rest/api/iothub/service/digitaltwin
     - name: .NET (Gerät)
       href: /dotnet/api/microsoft.azure.devices.client
     - name: .NET (Dienst)
@@ -97,6 +151,10 @@
   items:
     - name: Support- und Hilfeoptionen
       href: ../iot-fundamentals/iot-support-help.md?toc=/azure/iot-develop/toc.json&bc=/azure/iot-develop/breadcrumb/toc.json
+    - name: IoT-Glossar
+      href: ../iot-fundamentals/iot-glossary.md?toc=/azure/iot-develop/toc.json&bc=/azure/iot-develop/breadcrumb/toc.json
+    - name: Codebeispiele
+      href: /samples/browse/?expanded=azure&products=azure-iot-pnp
     - name: "Azure\_IoT-Beispiele"
       items:
         - name: C# (.NET)
