--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -50,7 +50,7 @@
         - name: Dienstanbieter anzeigen und verwalten
           displayName: 'customer, update, visibility, control'
           href: ./how-to/view-manage-service-providers.md
-        - name: Anzeigen der Dienstanbieteraktivität
+        - name: Überwachen der Dienstanbieteraktivität
           displayName: 'monitor, log, customer, visibility, transparency, control'
           href: ./how-to/view-service-provider-activity.md
     - name: Onboarding und Delegierungsverwaltung
@@ -127,8 +127,8 @@
   items:
     - name: Microsoft Q&A (Fragen und Antworten) für Azure Lighthouse
       href: /answers/topics/azure-lighthouse.html
-    - name: Azure-Roadmap
-      href: 'https://azure.microsoft.com/roadmap/'
+    - name: Azure-Updates
+      href: 'https://azure.microsoft.com/updates/'
     - name: Preisrechner
       href: 'https://azure.microsoft.com/pricing/calculator/'
     - name: Regionale Verfügbarkeit
