--- a/articles/purview/toc.yml
+++ b/articles/purview/toc.yml
@@ -68,6 +68,8 @@ items:
         href: concept-insights.md
       - name: Unterstützte Browser
         href: supported-browsers.md
+      - name: Ressourcennormalisierung
+        href: concept-asset-normalization.md
       - name: Häufig gestellte Fragen
         href: frequently-asked-questions.md
   - name: Anleitungen
@@ -104,6 +106,12 @@ items:
               - name: Azure Cosmos DB
                 href: register-scan-azure-cosmos-database.md
                 displayName: Register and scan Azure Cosmos DB
+              - name: Azure Database for MySQL
+                href: register-scan-azure-mysql-database.md
+                displayName: Register and scan an Azure database for MySQL
+              - name: Azure Database for PostgreSQL
+                href: register-scan-azure-postgresql.md
+                displayName: Register and scan an Azure database for PostgreSQL
               - name: Azure-Daten-Explorer
                 href: register-scan-azure-data-explorer.md
                 displayName: Register and scan Azure Data Explorer Kusto
@@ -121,8 +129,14 @@ items:
                 displayName: Register and scan Azure SQL DB Managed Instance
               - name: "Dedizierter Azure-SQL-Pool (vormals SQL\_DW)"
                 href: register-scan-azure-synapse-analytics.md
+              - name: Erwin
+                href: register-scan-erwin-source.md
+              - name: Google BigQuery
+                href: register-scan-google-bigquery-source.md
               - name: Hive-Metastore-Datenbank
                 href: register-scan-hive-metastore-source.md
+              - name: Looker
+                href: register-scan-looker-source.md
               - name: 'Lokaler SQL-Server:'
                 href: register-scan-on-premises-sql-server.md
               - name: Oracle
