--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -39,10 +39,29 @@
       href: ../common/storage-samples-javascript.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Andere Sprachen
       href: ../common/storage-samples.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+    - name: Azure Resource Graph-Abfragen
+      href: ../common/resource-graph-samples.md
 - name: Konzepte
   items:
     - name: Speicherkonten
       href: ../common/storage-account-overview.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+    - name: Authorization
+      href: ../common/authorize-data-access.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+      items:
+        - name: Authentifizieren und Autorisieren mit Azure AD
+          href: authorize-access-azure-active-directory.md
+        - name: Autorisieren mit einem gemeinsam verwendeten Schlüssel
+          items:
+            - name: Verwalten und Anzeigen von Kontoschlüsseln
+              href: ../common/storage-account-keys-manage.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+            - name: Konfigurieren von Verbindungszeichenfolgen
+              href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+            - name: Verwenden der Azure Storage-REST-API
+              href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+        - name: Autorisieren mit SAS
+          href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
+    - name: Autorisieren von Verwaltungsvorgängen
+      href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Sicherheit
       items:
         - name: "Azure\_Storage-Verschlüsselung ruhender Daten"
@@ -50,23 +69,6 @@
           items:
             - name: Verschlüsselung mit kundenseitig verwalteten Schlüsseln
               href: ../common/customer-managed-keys-overview.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-        - name: Autorisieren von Datenvorgängen
-          href: ../common/storage-auth.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-          items:
-            - name: Authentifizieren und Autorisieren mit Azure AD
-              href: ../common/storage-auth-aad.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-            - name: Autorisieren mit einem gemeinsam verwendeten Schlüssel
-              items:
-                - name: Verwalten und Anzeigen von Kontoschlüsseln
-                  href: ../common/storage-account-keys-manage.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-                - name: Konfigurieren von Verbindungszeichenfolgen
-                  href: ../common/storage-configure-connection-string.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-                - name: Verwenden der Azure Storage-REST-API
-                  href: ../common/storage-rest-api-auth.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-            - name: Autorisieren mit SAS
-              href: ../common/storage-sas-overview.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-        - name: Autorisieren von Verwaltungsvorgängen
-          href: ../common/authorization-resource-provider.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Verwenden von privaten Azure-Endpunkten
           href: ../common/storage-private-endpoints.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Sicherheitskontrollen von Azure Policy
@@ -201,7 +203,7 @@
       items:
         - name: Verwenden des Azurite-Open-Source-Emulators
           href: ../common/storage-use-azurite.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
-        - name: Verwenden des Azure Storage-Emulators
+        - name: Verwenden des Azure Storage-Emulators (veraltet)
           href: ../common/storage-use-emulator.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
     - name: Entwickeln mit Warteschlangen
       items:
