--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -230,8 +230,10 @@
           items:
             - name: 'Erstellen eines Präfixes für öffentliche IP-Adressen: Portal'
               href: create-public-ip-prefix-portal.md
-            - name: Erstellen eines Präfixes für öffentliche IPv6-Adressen
-              href: ipv6-reserve-public-ip-address-prefix.md
+            - name: 'Erstellen eines Präfixes für öffentliche IP-Adressen: PowerShell'
+              href: create-public-ip-prefix-powershell.md
+            - name: 'Erstellen eines Präfixes für öffentliche IP-Adressen: Azure CLI'
+              href: create-public-ip-prefix-cli.md
         - name: Upgraden einer öffentlichen IP-Adresse
           items:
             - name: 'Upgraden einer öffentlichen IP-Adresse: Portal'
@@ -256,12 +258,10 @@
               items:
                 - name: 'Interne Instanz von Load Balancer Standard mit IPv6: PowerShell'
                   href: ipv6-dual-stack-standard-internal-load-balancer-powershell.md
-            - name: Basic (öffentlich)
-              items:
-                - name: 'Öffentliche Instanz von Load Balancer Basic mit IPv6: PowerShell'
-                  href: ipv6-add-to-existing-vnet-powershell.md
-                - name: "Öffentliche Instanz von Load Balancer Basic mit IPv6: Azure\_CLI"
-                  href: ipv6-add-to-existing-vnet-cli.md
+            - name: 'Hinzufügen von IPv6 zu einer IPv4-Anwendung: PowerShell'
+              href: ipv6-add-to-existing-vnet-powershell.md
+            - name: 'Hinzufügen von IPv6 zu einer IPv4-Anwendung: Azure CLI'
+              href: ipv6-add-to-existing-vnet-cli.md
         - name: Routingpräferenz
           items:
             - name: Erstellen einer öffentlichen IP-Adresse
